[tool.poetry]
name = "acquity"
version = "0.1.0"
description = ""
authors = ["Herbert Ilhan Tanujaya <mail@herbert.id>"]

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^19.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
